[package]
name = "rust_minifilter_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wchar = "0.11.0"
widestring = "1.0.2"
libc = "0.2.139"
[dependencies.windows]
version = "0.37.0"
features = [
    "Win32_Storage_InstallableFileSystems",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_System_Diagnostics_Debug",
]